build: rename package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adyen/adyenapi-library",
+  "name": "@khaledbenbouali/adyenapi-library",
   "version": "12.0.1",
   "description": "The Adyen API Library for NodeJS enables you to work with Adyen APIs.",
   "main": "lib/src/index.js",
